--- a/ExampleApplication/Web.config
+++ b/ExampleApplication/Web.config
@@ -9,7 +9,7 @@
     <httpRuntime targetFramework="4.5.2"/>
     <pages>
       <controls>
-        <add tagPrefix="nc" namespace="NoCaptcha" assembly="NoCaptcha" />
+        <add tagPrefix="nc" namespace="Gnome.NoCaptcha" assembly="Gnome.NoCaptcha" />
       </controls>
     </pages>
   </system.web>
