--- a/NoCaptcha/NoCaptcha.nuspec
+++ b/NoCaptcha/NoCaptcha.nuspec
@@ -10,7 +10,7 @@
     <projectUrl>https://github.com/hounsell/NoCaptcha/</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
+    <releaseNotes>Assembly now signed; Secure Token default change to false as Google are deprecating the Secure Token.</releaseNotes>
     <copyright>Copyright 2015, Thomas Hounsell</copyright>
     <tags>google recaptcha nocaptcha asp.net webforms</tags>
   </metadata>
